--- a/app/views/login-view.html
+++ b/app/views/login-view.html
@@ -1,14 +1,7 @@
 <div ng-controller="login" data-ng-init="checkIsSaved()">
-	<div ng-class="{'hide':!hide}">
-		<input type="text" ng-model="company.slug" placeholder="Empresa">
-		<button ng-click="checkCompany(company.slug)">Próximo</button>
-		{{ error }}
+<div class="grid">
+	<div class="col-8-12">
+		<h1>FOCA!</h1>
 	</div>
-	<div ng-class="{'hide':hide}">
-		<input type="email" ng-model="user.email" placeholder="email">
-		<input type="password" ng-model="user.password" placeholder="password">
-		<input type="checkbox" ng-model="keep">
-		<button ng-click="checkUser(user,company.id)">login</button>
-		{{ error }}
-	</div>
+</div>
 </div>
