--- a/app/views/main-view.html
+++ b/app/views/main-view.html
@@ -1,7 +1,31 @@
 <div ng-controller="main">
-	<button ng-click="checkout()">Bater o ponto</button>
-	<br>
-	<button ng-click="logout()">Sair</button>
+	<div class="subHeader body">
+		<span class="date left">Hoje 06/07</span>
+		<span class="continue right">Próximo ></span>
+		<div class="clear"></div>
+	</div>
+	<div class="body white">
+		<div class="item">
+			<div class="title left">Matéria</div>
+			<div class="icon right">ICON</div>
+		</div>
 
-	{{user | json}}
+		<div class="item">
+			<div class="title left">Matéria</div>
+			<div class="icon right">ICON</div>
+		</div>
+
+		<div class="item">
+			<div class="title left">Matéria</div>
+			<div class="icon right">ICON</div>
+		</div>
+
+		<div class="item">
+			<div class="title left">Matéria</div>
+			<div class="icon right">ICON</div>
+		</div>
+	
+		<button class="button button-fab button-fab-bottom-right button-assertive icon ion-paper-airplane waves-effect waves-button waves-light"></button>
+
+	</div>
 </div>
