modified style, main and login

--- a/app/views/login-view.html
+++ b/app/views/login-view.html
@@ -1,14 +1,6 @@
-<div class="body orange login" ng-controller="login" data-ng-init="checkIsSaved()">
-    <div class="mid">
-        <div class="grid center textcenter">
-            <img class="simbolo" src='assets/images/logo.svg'>
-            <div class="clear">
-            </div>
-            <div class="clear"></div>
-            <div class="textcenter nofloat cwhite">Iniciar sua seçã:</div>
-            <div class="social bblue nofloat cwhite textcenter"> COM O FACEBOOK</div>
-            <div class="social bred nofloat cwhite textcenter"> COM O GOOGLE+</div>
-            <div class=""></div>
-        </div>
+<div class=" body orange login" ng-controller="login" data-ng-init="checkIsSaved()">
+    <div class="container">
+        <button class="foc-8 foc-offset-2"> COM O FACEBOOK</button>
+        <button class="foc-8 foc-offset-2"> COM O GOOGLE+</button>
     </div>
 </div>
