--- a/app/views/main-view.html
+++ b/app/views/main-view.html
@@ -1,31 +1,39 @@
-<div ng-controller="main">
-	<div class="subHeader body">
-		<span class="date left">Hoje 06/07</span>
-		<span class="continue right">Próximo ></span>
-		<div class="clear"></div>
-	</div>
-	<div class="body white">
-		<div class="item">
-			<div class="title left">Matéria</div>
-			<div class="icon right">ICON</div>
-		</div>
-
-		<div class="item">
-			<div class="title left">Matéria</div>
-			<div class="icon right">ICON</div>
-		</div>
-
-		<div class="item">
-			<div class="title left">Matéria</div>
-			<div class="icon right">ICON</div>
-		</div>
-
-		<div class="item">
-			<div class="title left">Matéria</div>
-			<div class="icon right">ICON</div>
-		</div>
-	
-		<button class="button button-fab button-fab-bottom-right button-assertive icon ion-paper-airplane waves-effect waves-button waves-light"></button>
-
-	</div>
+<div class="" ng-controller="main">
+    <div class="subHeader orange-bg light container row">
+        <span class="foc-8">Hoje 06/07</span>
+        <span class="foc-4">Próximo > </span>
+    </div>
+    <div class="container">
+        <div class="row rowup">
+            <div class="foc-3">14:00</div>
+            <div class="foc-7">Matéria</div>
+            <div class="foc-2">IC</div>
+        </div>
+        <div class="row rowup">
+            <div class="foc-3">14:00</div>
+            <div class="foc-7">Matéria</div>
+            <div class="foc-2">IC</div>
+        </div>
+        <div class="row rowup">
+            <div class="foc-3">14:00</div>
+            <div class="foc-7">Matéria</div>
+            <div class="foc-2">IC</div>
+        </div>
+        <div class="row rowup">
+            <div class="foc-3">14:00</div>
+            <div class="foc-7">Matéria</div>
+            <div class="foc-2">IC</div>
+        </div>
+        <div class="row rowup">
+            <div class="foc-3">14:00</div>
+            <div class="foc-7">Matéria</div>
+            <div class="foc-2">IC</div>
+        </div>
+        <div class="row rowup">
+            <div class="foc-3">14:00</div>
+            <div class="foc-7">Matéria</div>
+            <div class="foc-2">IC</div>
+        </div>
+    </div>
+    <button class="ionic button button-fab button-fab-bottom-right button button-fab icon ion-plus-round"></button>
 </div>
