--- a/app/views/login-view.html
+++ b/app/views/login-view.html
@@ -1,6 +1,20 @@
-<div class=" body orange login" ng-controller="login" data-ng-init="checkIsSaved()">
-    <div class="container">
-        <button class="foc-8 foc-offset-2"> COM O FACEBOOK</button>
-        <button class="foc-8 foc-offset-2"> COM O GOOGLE+</button>
+<div class="body full orange" ng-controller="login" data-ng-init="checkIsSaved()">
+    <div class="login-present">
+        <div class="text side">
+            <h1 class="login">FOCA!</h1>
+            <span class="small">nos estudos.</span>
+            <span class="ultra-small">O seu aplicativo para estudos</span>
+        </div>
+        <div class="side logo">
+        	<img class="logo login" src="assets/images/logo.svg">
+        </div>
+        <div class="clear"></div>
+	
+		<div class="actions">
+			<a href="javascript:void(0);" ui-sref="home" ><div class="socialButton gplus">Google+</div></a>
+			<a href="javascript:void(0);" ui-sref="home" ><div class="socialButton facebook">Facebook</div></a>
+			<a href="javascript:void(0);" ui-sref="home" ><div class="socialButton nosocial">Teste</div></a>
+		</div>
+
     </div>
 </div>
