--- a/assets/css/material.css
+++ b/assets/css/material.css
@@ -4171,7 +4171,6 @@ html {
     touch-action: pan-y;
 }
 
-body,
 .ionic-body {
     -webkit-touch-callout: none;
     -webkit-font-smoothing: antialiased;
@@ -4196,6 +4195,36 @@ body,
     word-wrap: break-word;
     font-size: 14px;
     font-family: "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+    line-height: 20px;
+    text-rendering: optimizeLegibility;
+    -webkit-backface-visibility: hidden;
+    -webkit-user-drag: none;
+    -ms-content-zooming: none;
+}
+
+body {
+    -webkit-touch-callout: none;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    text-size-adjust: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    color: #000;
+    word-wrap: break-word;
+    font-size: 14px;
     line-height: 20px;
     text-rendering: optimizeLegibility;
     -webkit-backface-visibility: hidden;
@@ -4874,17 +4903,16 @@ a.light {
 
 .orange,
 a.orange {
-    color: #f58634 ;
+    color: #f58634;
 }
 
 .orange-bg {
-    background-color: #f58634 ;
+    background-color: #f58634;
 }
 
 .oragen-border {
-    border-color: #f58634 ;
+    border-color: #f58634;
 }
-
 
 [collection-repeat] {
     /* Position is set by transforms */
