--- a/app/views/login-view.html
+++ b/app/views/login-view.html
@@ -11,9 +11,9 @@
         <div class="clear"></div>
 	
 		<div class="actions">
-			<a href="javascript:void(0);" ui-sref="home" ><div class="socialButton gplus">Google+</div></a>
-			<a href="javascript:void(0);" ui-sref="home" ><div class="socialButton facebook">Facebook</div></a>
-			<a href="javascript:void(0);" ui-sref="home" ><div class="socialButton nosocial">Teste</div></a>
+			<a href="javascript:void(0);" ui-sref="home" ><div class="socialButton gplus waves-effect waves-light">Google+</div></a>
+			<a href="javascript:void(0);" ui-sref="home" ><div class="socialButton facebook waves-effect waves-light">Facebook</div></a>
+			<a href="javascript:void(0);" ui-sref="home" ><div class="socialButton nosocial waves-effect waves-dark">Teste</div></a>
 		</div>
 
     </div>
