--- a/app/views/main-view.html
+++ b/app/views/main-view.html
@@ -1,39 +1,19 @@
 <div class="" ng-controller="main">
-    <div class="subHeader orange-bg light container row">
-        <span class="foc-8">Hoje 06/07</span>
-        <span class="foc-4">Próximo > </span>
+    <div class="sub-header">
+        <span class="side date">Hoje 06/07</span>
+        <span class="side next">Próximo > </span>
+        <div class="clear"></div>
     </div>
     <div class="container">
-        <div class="row rowup">
-            <div class="foc-3">14:00</div>
-            <div class="foc-7">Matéria</div>
-            <div class="foc-2">IC</div>
+        <div class="material waves-effect waves-button waves-dark">
+            Matemática
         </div>
-        <div class="row rowup">
-            <div class="foc-3">14:00</div>
-            <div class="foc-7">Matéria</div>
-            <div class="foc-2">IC</div>
+        <div class="material waves-effect waves-button waves-dark">
+            Linguas
         </div>
-        <div class="row rowup">
-            <div class="foc-3">14:00</div>
-            <div class="foc-7">Matéria</div>
-            <div class="foc-2">IC</div>
-        </div>
-        <div class="row rowup">
-            <div class="foc-3">14:00</div>
-            <div class="foc-7">Matéria</div>
-            <div class="foc-2">IC</div>
-        </div>
-        <div class="row rowup">
-            <div class="foc-3">14:00</div>
-            <div class="foc-7">Matéria</div>
-            <div class="foc-2">IC</div>
-        </div>
-        <div class="row rowup">
-            <div class="foc-3">14:00</div>
-            <div class="foc-7">Matéria</div>
-            <div class="foc-2">IC</div>
+        <div class="material waves-effect waves-button waves-dark">
+            Ciências Humanas
         </div>
     </div>
-    <button class="ionic button button-fab button-fab-bottom-right button button-fab icon ion-plus-round"></button>
+    <button class="button button-fab button-fab-bottom-right button-assertive icon ion-paper-airplane waves-effect waves-button waves-light"></button>
 </div>
