--- a/assets/css/foca.css
+++ b/assets/css/foca.css
@@ -36,6 +36,9 @@ a {
 
 body {
     color: #000;
+}
+
+* {
     font-family: 'GothamMedium' !important;
 }
 
@@ -48,7 +51,7 @@ a {
 }
 
 .body.orange {
-    background-color: rgb(220, 133, 61);
+    background-color: #DC853D;
 }
 
 .body.full {
@@ -65,6 +68,7 @@ a {
 
 .logo.login {
     width: 96px;
+    margin-left: 15px;
 }
 
 .login-present {
@@ -95,7 +99,10 @@ a {
 .login-present .text {
     text-align: right;
     margin-top: 15px;
-    line-height: 20px;
+    line-height: 2px;
+}
+.login-present .small{
+    font-size: 10px;
 }
 
 .login-present .logo {
@@ -106,14 +113,9 @@ a {
     margin-top: 40px;
 }
 
-a:active .socialButton {
-    background-color: #fff;
-    color: #000;
-}
-
 .socialButton {
     width: 80%;
-    margin: 0 auto;
+    margin: 5px 10% !important;
     height: 40px;
     text-align: center;
     line-height: 40px;
@@ -123,9 +125,27 @@ a:active .socialButton {
 }
 
 .socialButton.gplus {
-    background-color: #000;
+    background-color: #C60028;
 }
 
 .socialButton.facebook {
-    background-color: #000;
+    background-color: #0E4E95;
+}
+/* ############################################## */
+
+.sub-header {
+    background-color: #C4691E;
+    padding: 10px;
+    color: #fff;
+}
+
+.next {
+    text-align: right;
+}
+
+.material {
+    padding: 10px;
+    background-color: #ccc;
+    margin: 10px;
+    display: block;
 }
